Fix: Change flex-wrap to wrap for dynamic type wrapper

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -97,7 +97,7 @@
 
 		.name-dynamic-type-wrapper {
 			display: flex;
-			flex-wrap: nowrap;
+			flex-wrap: wrap;
 			gap: 10px;
 
 			.field-name-wrapper {
